# CF-CST

./: Cargo.toml  README.md  args.go  cfspeed.go  cidr.go  db_manager.go  getcolo.go  main.go  output.go  setup.sh  tcping.go  types.go
.github/workflows/: build.yml  no_upx.yml  opw.yml  test.yml
binaries/: cfspeed_linux_386  cfspeed_linux_amd64  cfspeed_linux_arm  cfspeed_linux_arm64  cfspeed_linux_mips  cfspeed_linux_mipsle  cfspeed_windows_386  cfspeed_windows_amd64
binaries/Linux_AMD64/: CF-CST
binaries/Linux_ARM64/: CF-CST
binaries/MacOS_AMD64/: CF-CST
binaries/MacOS_ARM64/: CF-CST
src/: args.rs  cidr.rs  csv.rs  getcolo.rs  main.rs  output.rs  pool.rs  tcping.rs  test.rs  types.rs
