[package]
name = "cfspeed"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.29.1", features = ["full"] }
reqwest = { version = "0.11.27", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
anyhow = "1.0.97"
thiserror = "1.0.69"
once_cell = "1.21.1"
ipnetwork = "0.20.0"
humantime = "2.2.0"
ipnet = "2.11.0"
clap = { version = "4.4.2", features = ["derive"] }
csv = "1.2.0"
rand = "0.9.0"
futures = "0.3.28"
chrono = "0.4.31"
num_cpus = "1.16.0"
async-trait = "0.1.68"
governor = "0.4.1"
dashmap = "5.0.0"
indicatif = "0.17.11"
lazy_static = "1.5.0"
prettytable-rs = "0.10.0"
colored = "2.0"
