[package]
name = "CF-CST"
version = "0.1.0"
edition = "2024"

[dependencies]
colored = "3"
prettytable-rs = "0.10"
ipnet = "2.11"
ipnet-trie = "0.3"
shell-words = "1.1"

[profile.release]
opt-level = "z"          # 最小体积
lto = "fat"              # 启用链接时优化，使用 "fat" 模式以获得最佳效果
codegen-units = 1        # 禁用并行编译单元，确保全局优化
panic = "abort"          # 禁用回溯，减少运行时开销
strip = "symbols"        # 移除所有符号信息
debug = 0                # 禁用调试信息
incremental = false      # 禁用增量编译，确保全局优化
overflow-checks = false  # 禁用整数溢出检查
